--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<main class="container p-b-lg">
+<div class="container p-b-lg">
   {% for post in site.posts %}
     <article class="card m-b">
       <div class="card-block">
         <h1>{{post.name}}</h1>
-        <h2><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
+        <h2><a class="t-curly-braces" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
         <ul>
           {% if post.slides != 'inactive' %}
             <li>
@@ -25,4 +25,4 @@ layout: default
       </div>
     </article>
   {% endfor %}
-</main>
+</div>
