--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <article class="card m-b">
       <div class="card-block">
         <h1>{{post.name}}</h1>
-        <h2><a class="t-curly-braces" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
+        <h2><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
         <ul>
           {% if post.slides != 'inactive' %}
             <li>
